--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,3 +17,6 @@ jobs:
   # You may pin to the exact commit or the version.
   # uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
       uses: docker/build-push-action@v4.0.0
+      with:
+        push: true
+        tags: ${{ github.repository }}:$(date +%s)
