--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,3 +34,4 @@ jobs:
         with:
             push: ${{ github.event_name != 'pull_request' }}
             tags: ${{ steps.meta.outputs.tags }}
+            secrets: ${{ secrets.GITHUB_TOKEN }}
